--- a/frontend/src/common/import.css
+++ b/frontend/src/common/import.css
@@ -1,5 +1,5 @@
 /* 기본 설정 (리셋, 변수) */
-@import "../css/reset.css";
+/* @import "../css/reset.css"; */
 @import "../css/base.css";
 @import "../css/modules.css";
 
