--- a/frontend/src/css/base.css
+++ b/frontend/src/css/base.css
@@ -1,6 +1,10 @@
 /* App.css Legacy Utilities (Migrated) */
 
 /* Global Reset Overrides */
+:root {
+  --color-alert-red: #ff3b30;
+}
+
 * {
   @apply m-0 p-0 box-border;
 }
