ui 수정 (찜목록, 상세페이지 이미지 원 간격)

--- a/frontend/src/css/modules.css
+++ b/frontend/src/css/modules.css
@@ -429,6 +429,10 @@ button:disabled {
   @apply bottom-[10px] z-[2];
 }
 
+.product-slider .slick-dots li {
+  @apply w-auto mx-[3px] !important;
+}
+
 /* slider arrows */
 .slick-prev,
 .slick-next {
